--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@sentry/react": "^7.66.0",
     "@types/node": "^20.5.9",
     "cheerio": "^1.0.0-rc.12",
+    "jsonrepair": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
