--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@trpc/next": "^10.9.0",
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
+    "cheerio": "^1.0.0-rc.12",
+    "jsonrepair": "^3.2.0",
     "next": "^13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
