--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@sentry/nextjs": "^7.69.0",
     "@tanstack/react-query": "^4.35.3",
     "@trpc/client": "^10.38.3",
     "@trpc/next": "^10.38.3",
