--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@trpc/next": "^10.38.3",
     "@trpc/react-query": "^10.38.3",
     "@trpc/server": "^10.38.3",
+    "@vercel/kv": "^0.2.2",
     "cheerio": "^1.0.0-rc.12",
     "jsonrepair": "^3.2.0",
     "next": "^13.4.19",
