--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest --watch"
   },
   "dependencies": {
     "@sentry/nextjs": "^7.69.0",
@@ -27,7 +28,10 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/react": "^14.0.0",
     "@types/eslint": "^8.44.2",
+    "@types/jest": "^29.5.5",
     "@types/node": "^20.6.2",
     "@types/prettier": "^3.0.0",
     "@types/react": "^18.2.21",
@@ -38,6 +42,8 @@
     "daisyui": "^3.7.5",
     "eslint": "^8.49.0",
     "eslint-config-next": "^13.4.19",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.29",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
