--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@sentry/nextjs": "^7.77.0",
-    "@tanstack/react-query": "^5.4.3",
+    "@tanstack/react-query": "4.35.3",
     "@trpc/client": "^10.43.0",
     "@trpc/next": "^10.43.0",
     "@trpc/react-query": "^10.43.0",
