--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@
 # When adding additional environment variables, the schema in "/src/env.mjs"
 # should be updated accordingly.
 
-# Example:
-API_KEY="FOO"
-# NEXT_PUBLIC_CLIENTVAR="bar"
+
+
+# Plausible
+NEXT_PUBLIC_PLAUSIBLE_URL=
