--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "jest --watch"
   },
   "dependencies": {
-    "@sentry/nextjs": "^8.11.0",
+    "@sentry/nextjs": "^8.21.0",
     "@tanstack/react-query": "4.35.3",
     "@trpc/client": "^10.45.2",
     "@trpc/next": "^10.45.2",
@@ -21,7 +21,8 @@
     "@vercel/kv": "^2.0.0",
     "cheerio": "^1.0.0-rc.12",
     "jsonrepair": "^3.8.0",
-    "next": "^14.2.4",
+    "next": "^14.2.5",
+    "next-plausible": "^3.12.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.2.1",
@@ -29,27 +30,27 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
-    "@types/eslint": "^8.56.10",
+    "@types/eslint": "^8.56.11",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.14.7",
+    "@types/node": "^20.14.13",
     "@types/prettier": "^3.0.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.13.1",
-    "@typescript-eslint/parser": "^7.13.1",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
     "autoprefixer": "^10.4.19",
-    "daisyui": "^4.12.2",
+    "daisyui": "^4.12.10",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.4",
+    "eslint-config-next": "^14.2.5",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "postcss": "^8.4.38",
-    "prettier": "^3.3.2",
+    "postcss": "^8.4.40",
+    "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
-    "tailwindcss": "^3.4.4",
-    "typescript": "^5.5.2"
+    "tailwindcss": "^3.4.7",
+    "typescript": "^5.5.4"
   },
   "ct3aMetadata": {
     "initVersion": "7.7.0"
