--- a/package.json
+++ b/package.json
@@ -11,46 +11,46 @@
     "test": "jest --watch"
   },
   "dependencies": {
-    "@sentry/nextjs": "^8.21.0",
+    "@sentry/nextjs": "^8.55.0",
     "@tanstack/react-query": "4.35.3",
     "@trpc/client": "^10.45.2",
     "@trpc/next": "^10.45.2",
     "@trpc/react-query": "^10.45.2",
     "@trpc/server": "^10.45.2",
-    "@vercel/analytics": "^1.3.1",
+    "@vercel/analytics": "^1.5.0",
     "@vercel/kv": "^2.0.0",
-    "cheerio": "^1.0.0-rc.12",
-    "jsonrepair": "^3.8.0",
-    "next": "^14.2.5",
-    "next-plausible": "^3.12.0",
+    "cheerio": "^1.1.0",
+    "jsonrepair": "^3.13.0",
+    "next": "^14.2.30",
+    "next-plausible": "^3.12.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^5.2.1",
+    "react-icons": "^5.5.0",
     "superjson": "1.13.3",
-    "zod": "^3.23.8"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.4.8",
-    "@testing-library/react": "^16.0.0",
-    "@types/eslint": "^8.56.11",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^20.14.13",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@types/eslint": "^8.56.12",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^20.19.8",
     "@types/prettier": "^3.0.0",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
-    "autoprefixer": "^10.4.19",
-    "daisyui": "^4.12.10",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.5",
+    "autoprefixer": "^10.4.21",
+    "daisyui": "^4.12.24",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.2.30",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "postcss": "^8.4.40",
-    "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.5",
-    "tailwindcss": "^3.4.7",
-    "typescript": "^5.5.4"
+    "postcss": "^8.5.6",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.8.3"
   },
   "ct3aMetadata": {
     "initVersion": "7.7.0"
